--- a/Page Gift/styles.css
+++ b/Page Gift/styles.css
@@ -7,7 +7,7 @@ body{
   .main-box{
     width: 100%;
     margin: 0 auto;
-    background-image:url('https://wallpapersmug.com/download/1440x2630/cd541b/moon-light-night-starry-sky.jpg');
+    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.peakpx.com%2Fen%2Fhd-wallpaper-desktop-pvzre&psig=AOvVaw3g4ixeXcLCxKTZ869Rfe2o&ust=1763745950155000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLjasPWfgZEDFQAAAAAdAAAAABAE');
     background-size: 100%;
   }
   
@@ -62,5 +62,6 @@ body{
     text-shadow: 2px 2px 3px #4F200D;
     text-decoration: underline;
   }
+
 
  
