--- a/Page Gift/styles.css
+++ b/Page Gift/styles.css
@@ -7,7 +7,7 @@ body{
   .main-box{
     width: 100%;
     margin: 0 auto;
-    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.peakpx.com%2Fen%2Fhd-wallpaper-desktop-pvzre&psig=AOvVaw3g4ixeXcLCxKTZ869Rfe2o&ust=1763745950155000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLjasPWfgZEDFQAAAAAdAAAAABAE');
+    background-image:url('https://w0.peakpx.com/wallpaper/398/783/HD-wallpaper-moon-light-blue-minimal-mood-moon-moonlight-night-purple-sky-starry-sky-stars.jpg');
     background-size: 100%;
   }
   
@@ -65,3 +65,4 @@ body{
 
 
  
+
